Adds developer login info

--- a/jobs/uaa-customized/templates/govcloud/web/login.html
+++ b/jobs/uaa-customized/templates/govcloud/web/login.html
@@ -11,6 +11,11 @@
             </p>
             <input type="submit" value="Agree and continue" class="island-button js-notice-submit" />
         </div>
+        <div class="island">
+            <p>
+                <a href="https://cloud.gov/docs/getting-started/accounts/">Learn about getting access to cloud.gov.</a>
+            </p>
+        </div>
         <div class="js-notice-more_information modal fade">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -94,11 +99,9 @@
             </script>
         </div>
     </div>
-    <div class="island">
-        <p>
-            <a href="https://cloud.gov/docs/getting-started/accounts/">Learn about getting access to cloud.gov.</a>
-        </p>
-    </div>
+    <p>Developers can log in via the command line:</p>
+    <pre class="island-content">cf login -a api.fr.cloud.gov  --sso</pre>
+    <a href="https://cloud.gov/docs/getting-started/setup/#quick-reference">See our documentation for login details</a>
 </div>
 
 </html>
