--- a/jobs/uaa-customized/templates/web/pw_validation.html
+++ b/jobs/uaa-customized/templates/web/pw_validation.html
@@ -8,6 +8,7 @@
         <script type="text/javascript" src="/vendor/jquery/javascripts/jquery.js" th:src="@{'/vendor/jquery/javascripts/jquery.js'}"></script>
     </th:block>
     <th:block layout:fragment="head">
+        <script type="text/javascript" src="/resources/javascripts/vendor/zxcvbn.js" th:src="@{'/resources/javascripts/vendor/zxcvbn.js'}"></script>
         <script type="text/javascript" src="/resources/javascripts/pw_validation.js" th:src="@{'/resources/javascripts/pw_validation.js'}"></script>
     </th:block>
 </head>
