actually check password

--- a/jobs/uaa-customized/templates/web/pw_validation.html
+++ b/jobs/uaa-customized/templates/web/pw_validation.html
@@ -33,6 +33,7 @@
         <h5>Password must meet the following requirements:</h5>
         <ul class="list-unstyled" id="password-requirements-list">
             <li id="length-req" class="text-danger">At least <strong><span id="length-count"></span> characters long</strong></li>
+            <li id="zxcvbn-req" class="text-danger"></li>
         </ul>
     </div>
 </th:block>
