--- a/jobs/uaa-customized/templates/web/invitations/accept_invite.html
+++ b/jobs/uaa-customized/templates/web/invitations/accept_invite.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layouts/main" th:with="isLdap=${provider=='ldap'}">
+      layout:decorator="layouts/main" >
 <head>
     <th:block layout:include="pw_validation :: deps"></th:block>
     <th:block layout:include="pw_validation :: head"></th:block>
@@ -9,7 +9,7 @@
 <div class="island-landscape" layout:fragment="page-content">
     <th:block layout:include="pw_validation :: pw-validate('password', 'password_confirmation', 'submit')"></th:block>
     <div class="island-title">
-        <h1><th:block th:unless="${isLdap}">Create</th:block><th:block th:if="${isLdap}">Link</th:block> your <th:block th:text="${!companyName.equals('Cloud Foundry') and isUaa ? (companyName + ' account') : 'account'}">account</th:block></h1>
+        <h1><th:block th:unless="${provider=='ldap'}">Create</th:block><th:block th:if="${provider=='ldap'}">Link</th:block> your <th:block th:text="${!companyName.equals('Cloud Foundry') and isUaa ? (companyName + ' account') : 'account'}">account</th:block></h1>
     </div>
     <div class="island-content">
         <div th:text="|Email: ${email}|" th:unless="${error_message_code == 'code_expired'}" class="email-display">Email: user@example.com</div>
@@ -30,7 +30,7 @@
                 <input name="submit" type="submit" th:value="${!companyName.equals('Cloud Foundry') and isUaa ? 'Create ' + companyName + ' account' : 'Create account'}" class="island-button"/>
             </form>
           </th:block>
-            <th:block th:if="${isLdap}">
+            <th:block th:if="${provider=='ldap'}">
                 <p>Sign in with enterprise credentials: </p>
                 <form th:action="@{/invitations/accept_enterprise.do}" method="post" novalidate="novalidate">
                     <input name="enterprise_email" type="hidden" th:value="${email}"/>
