--- a/jobs/uaa-customized/templates/web/login.html
+++ b/jobs/uaa-customized/templates/web/login.html
@@ -55,12 +55,9 @@
                             </a>
                             <!-- button fills the full width of the column -->
                         </div>
-                        <div th:each="oauthIdp : ${oauthDefinitions}" th:if="${oauthIdp.value.showLinkText}">
-                            <div th:if="${oauthIdp.value.scopes == null}">
-                                <a href="" th:href="@{${oauthIdp.value.authUrl}(client_id=${oauthIdp.value.relyingPartyId},response_type=code,redirect_uri=${#httpServletRequest.requestURL + '/callback/' + oauthIdp.key})}" th:text="${oauthIdp.value.linkText}" class="saml-login-link btn--block">Use your corporate credentials</a>
-                            </div>
-                            <div th:if="${oauthIdp.value.scopes != null}">
-                                <a href="" th:href="@{${oauthIdp.value.authUrl}(client_id=${oauthIdp.value.relyingPartyId},response_type=code,redirect_uri=${#httpServletRequest.requestURL + '/callback/' + oauthIdp.key},scope=${#strings.listJoin(oauthIdp.value.scopes,' ')})}" th:text="${oauthIdp.value.linkText}" class="saml-login-link btn--block">Use your corporate credentials</a>
+                        <div th:each="oauthLink : ${oauthLinks}" >
+                            <div>
+                                <a href="" th:href="${oauthLink.key}" th:text="${oauthLink.value}" class="saml-login-link btn--block">Use your corporate credentials</a>
                             </div>
                         </div>
                     </div>
