--- a/jobs/uaa-customized/templates/web/login.html
+++ b/jobs/uaa-customized/templates/web/login.html
@@ -46,14 +46,21 @@
         <div class="js-full_login">
             <th:block th:if="${fieldUsernameShow}">
 
-                <h3 th:if="${showLoginLinks==true and fieldUsernameShow}" class="h3-primary">Sign in with your cloud.gov account or with your agency credentials.</h3>
+                <h3 th:if="${showLoginLinks==true and fieldUsernameShow}" class="h3-primary">Sign in to continue.</h3>
 
                 <div class="card saml-login">
                     <div class="row offset-4">
                         <!-- sets up a row w/ a 4px offest -->
-                        <div th:each="idp : ${idpDefinitions}" th:if="${idp.showSamlLink and idp.idpEntityAlias == 'cloud.gov'}" class="col col-xs-12 offset-4">
+                        <div th:each="idp : ${idpDefinitions}" th:if="${idp.showSamlLink and idp.idpEntityAlias == 'cloud.gov'}" class="col col-xs-24 offset-4">
                             <!-- sets up half-width column for the button -->
-                            <a href="" th:href="@{saml/discovery(returnIDParam=idp,entityID=${entityID},idp=${idp.idpEntityAlias},isPassive=true)}" class="saml-login-link btn--block btn--m color-blue text-left"><img src="" th:src="${idp.iconUrl}" class="badge--inline txt-m" alt="${idp.linkText}" /><span th:text="${idp.linkText}" class="txt-m">Use your corporate credentials</span>
+                            <a href="" 
+                                th:href="@{saml/discovery(returnIDParam=idp,entityID=${entityID},idp=${idp.idpEntityAlias},isPassive=true)}" 
+                                class="saml-login-link btn--block btn--m color-blue text-left">
+                                <img src="" 
+                                    th:src="${idp.iconUrl}" 
+                                    class="badge--inline txt-m" alt="cloud.gov icon" 
+                                />
+                                <span class="txt-m">Sign in with cloud.gov</span>
                             </a>
                         </div>
 
@@ -61,7 +68,7 @@
 
                     <div class="row offset-4">         
                         <div>
-                            <p>Or</p>
+                            <h3 class="h3-primary">Or use your agency credentials:</h3>
                         </div>           
                     </div>
 
@@ -72,11 +79,11 @@
                             <a href="" th:href="@{saml/discovery(returnIDParam=idp,entityID=${entityID},idp=${idp.idpEntityAlias},isPassive=true)}" class="saml-login-link btn--block btn--m color-blue text-left"><img src="" th:src="${idp.iconUrl}" class="badge--inline txt-m" alt="${idp.linkText}" /><span th:text="${idp.linkText}" class="txt-m">Use your corporate credentials</span>
                             </a>
                         </div>
-                        <!-- <div th:each="oauthLink : ${oauthLinks}" class="col col-xs-12 offset-4" >
+                        <div th:each="oauthLink : ${oauthLinks}" class="col col-xs-12 offset-4" >
                             <div>
                                 <a href="" th:href="${oauthLink.key}" th:text="${oauthLink.value}" class="saml-login-link btn--block btn--m color-blue text-left"><span th:text="${oauthLink.value}" class="txt-m"></span>Use your corporate credentials</a>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
             </th:block>
