visual changes to the login page part 2

--- a/jobs/uaa-customized/templates/web/login.html
+++ b/jobs/uaa-customized/templates/web/login.html
@@ -55,7 +55,7 @@
                             <!-- sets up half-width column for the button -->
                             <a href="" 
                                 th:href="@{saml/discovery(returnIDParam=idp,entityID=${entityID},idp=${idp.idpEntityAlias},isPassive=true)}" 
-                                class="saml-login-link btn--block btn--m color-blue text-left">
+                                class="saml-login-link btn--block btn--l color-blue text-left">
                                 <img src="" 
                                     th:src="${idp.iconUrl}" 
                                     class="badge--inline txt-m" alt="cloud.gov icon" 
