--- a/jobs/uaa-customized/templates/web/login.html
+++ b/jobs/uaa-customized/templates/web/login.html
@@ -3,7 +3,7 @@
 <div class="island" layout:fragment="page-content">
     <!--  This h1 is set to `.hidden` now, but that may be an acessibility problem.
     IDK what the most useful h1 would be for accessibility, I've added a simple one here. -->
-    <h1 th:text="${T(org.cloudfoundry.identity.uaa.zone.IdentityZoneHolder).uaa ? 'Welcome!':'Welcome to '+zone_name+'!'}" class="hidden">Sign in to cloud.gov</h1>
+    <h1 th:text="${T(org.cloudfoundry.identity.uaa.zone.IdentityZoneHolder).uaa ? 'Welcome!':'Welcome to '+zone_name+'!'}" class="visually-hidden">Sign in to cloud.gov</h1>
 
     <div class="island-content">
         <div class="card notice js-notice">
@@ -45,20 +45,33 @@
         <!-- /.modal -->
         <div class="js-full_login">
             <th:block th:if="${fieldUsernameShow}">
-
-                <h3 th:if="${showLoginLinks==true and fieldUsernameShow}" class="h3-primary">Sign in to continue.</h3>
-
-                <div class="card saml-login">
+                <div 
+                    th:if="${showLoginLinks==true and fieldUsernameShow}"
+                    class="card saml-login"
+                >
                     <div class="row offset-4">
-                        <!-- sets up a row w/ a 4px offest -->
-                        <div th:each="idp : ${idpDefinitions}" th:if="${idp.showSamlLink and idp.idpEntityAlias == 'cloud.gov'}" class="col col-xs-24 offset-4">
-                            <!-- sets up half-width column for the button -->
+                        <div class="col col-xs-24 offset-4">
+                            <h2 class="h2-primary mbxl mts">
+                                Choose your sign-in method
+                            </h2>
+                        </div>
+                    </div>
+
+                    <div class="row offset-4">
+                        <div 
+                            th:each="idp : ${idpDefinitions}" 
+                            th:if="${idp.showSamlLink and idp.idpEntityAlias == 'cloud.gov'}" 
+                            class="col col-xs-20 col-xs-push-2 offset-4"
+                        >
+                            <!-- Cloud.gov IDP -->
                             <a href="" 
                                 th:href="@{saml/discovery(returnIDParam=idp,entityID=${entityID},idp=${idp.idpEntityAlias},isPassive=true)}" 
-                                class="saml-login-link btn--block btn--l color-blue text-left">
+                                class="saml-login-link btn--block btn--l color-blue text-left"
+                                >
                                 <img src="" 
                                     th:src="${idp.iconUrl}" 
-                                    class="badge--inline txt-m" alt="cloud.gov icon" 
+                                    class="badge--inline txt-m" 
+                                    alt="cloud.gov icon" 
                                 />
                                 <span class="txt-m">Sign in with cloud.gov</span>
                             </a>
@@ -66,24 +79,49 @@
 
                     </div>
 
-                    <div class="row offset-4">         
-                        <div>
-                            <h3 class="h3-primary">Or use your agency credentials:</h3>
-                        </div>           
+
+                    <div class="row offset-4">
+                        <div class="col col-xs-24 offset-4">
+                            <h3 class="h3-black ptxl pbl">
+                                Or use your agency credentials
+                            </h3>
+                        </div>
                     </div>
 
                     <div class="row offset-4">
-                        <!-- sets up a row w/ a 4px offest -->
-                        <div th:each="idp : ${idpDefinitions}" th:if="${idp.showSamlLink and idp.idpEntityAlias != 'cloud.gov'}" class="col col-xs-12 offset-4">
-                            <!-- sets up half-width column for the button -->
-                            <a href="" th:href="@{saml/discovery(returnIDParam=idp,entityID=${entityID},idp=${idp.idpEntityAlias},isPassive=true)}" class="saml-login-link btn--block btn--m color-blue text-left"><img src="" th:src="${idp.iconUrl}" class="badge--inline txt-m" alt="${idp.linkText}" /><span th:text="${idp.linkText}" class="txt-m">Use your corporate credentials</span>
+                        <div 
+                            th:each="idp : ${idpDefinitions}" 
+                            th:if="${idp.showSamlLink and idp.idpEntityAlias != 'cloud.gov'}" 
+                            class="col col-xs-12 offset-4"
+                        >
+                            <!-- SAML -->
+                            <a href="" 
+                                th:href="@{saml/discovery(returnIDParam=idp,entityID=${entityID},idp=${idp.idpEntityAlias},isPassive=true)}" 
+                                class="saml-login-link btn--block btn--m color-blue text-left"
+                                >
+                                <img src="" 
+                                    th:src="${idp.iconUrl}" 
+                                    class="badge--inline txt-m" 
+                                    alt="${idp.linkText}" 
+                                />
+                                <span th:text="${idp.linkText}" class="txt-m">
+                                    Use your corporate credentials
+                                </span>
                             </a>
                         </div>
                         <div th:each="oauthLink : ${oauthLinks}" class="col col-xs-12 offset-4" >
-                            <div>
-                                <a href="" th:href="${oauthLink.key}" th:text="${oauthLink.value}" class="saml-login-link btn--block btn--m color-blue text-left"><span th:text="${oauthLink.value}" class="txt-m"></span>Use your corporate credentials</a>
-                            </div>
-                        </div>
+                            <!-- OAuth -->
+                            <a href="" 
+                                th:href="${oauthLink.key}" 
+                                th:text="${oauthLink.value}" 
+                                class="saml-login-link btn--block btn--m color-blue text-left"
+                                >
+                                <img class="badge--inline txt-m" alt="US Flag icon" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAALCAMAAABBPP0LAAAAG1BMVEUdM7EeNLIeM7HgQCDaPh/bPh/bPx/////bPyBEby41AAAAUElEQVQI123MNw4CABDEwD3jC/9/MQ1BQrgeOSkIqYe2o2FZtthXgQLgbHVMZdlsfUQFQnHtjP1+8BUhBDKOqtmfot6ojqPzR7TjdU+f6vkED+IDPhTBcMAAAAAASUVORK5CYII=" />
+                                <span th:text="${oauthLink.value}" class="txt-m">
+                                    Use your corporate credentials
+                                </span>
+                            </a>
+                    </div>
                     </div>
                 </div>
             </th:block>
