--- a/jobs/uaa-customized/templates/web/login.html
+++ b/jobs/uaa-customized/templates/web/login.html
@@ -3,7 +3,7 @@
 <div class="island" layout:fragment="page-content">
     <!--  This h1 is set to `.hidden` now, but that may be an acessibility problem.
     IDK what the most useful h1 would be for accessibility, I've added a simple one here. -->
-    <h1 th:text="${T(org.cloudfoundry.identity.uaa.zone.IdentityZoneHolder).uaa ? 'Welcome!':'Welcome to '+zone_name+'!'}" class="visually-hidden">Sign in to cloud.gov</h1>
+    <h1 th:text="${T(org.cloudfoundry.identity.uaa.zone.IdentityZoneHolder).uaa ? 'Welcome!':'Welcome to '+zone_name+'!'}" class="visually-hidden">Sign in to Cloud.gov</h1>
 
     <div class="island-content">
         <div class="card notice js-notice">
@@ -12,7 +12,7 @@
             <input type="submit" value="Agree and continue" class="island-button js-notice-submit" />
             <div class="panel-container">
                 <p>
-                    <a href="https://cloud.gov/docs/getting-started/accounts/">Learn about getting access to cloud.gov.</a>
+                    <a href="https://cloud.gov/docs/getting-started/accounts/">Learn about getting access to Cloud.gov.</a>
                 </p>
             </div>
         </div>
@@ -26,10 +26,10 @@
                         <h4 class="modal-title">This is a U.S. government service.</h4>
                     </div>
                     <div class="modal-body">
-                        <p>cloud.gov is a U.S. General Services Administration federal government service, for official use by U.S. government employees and contractors working on U.S. government digital services.</p>
-                        <p>All use of cloud.gov may be monitored, recorded, and subject to audit, by cloud.gov operations staff and other federal government authorities. There is no expectation of privacy for users of this system. By continuing to use this system, you consent to your use being monitored and recorded.</p>
+                        <p>Cloud.gov is a U.S. General Services Administration federal government service, for official use by U.S. government employees and contractors working on U.S. government digital services.</p>
+                        <p>All use of Cloud.gov may be monitored, recorded, and subject to audit, by Cloud.gov operations staff and other federal government authorities. There is no expectation of privacy for users of this system. By continuing to use this system, you consent to your use being monitored and recorded.</p>
                         <p>Unauthorized use is prohibited, and individuals found performing unauthorized activities are subject to disciplinary action including criminal prosecution.</p>
-                        <p>Acceptable uses of cloud.gov include building and managing government digital services, making and trying test services to learn about how cloud.gov works, and activities contributing to the development of cloud.gov itself. We describe these intended uses (along with guidelines and policies) in more detail in the <a href="https://docs.cloud.gov/getting-started/accounts/">cloud.gov documentation.</a>
+                        <p>Acceptable uses of Cloud.gov include building and managing government digital services, making and trying test services to learn about how Cloud.gov works, and activities contributing to the development of Cloud.gov itself. We describe these intended uses (along with guidelines and policies) in more detail in the <a href="https://cloud.gov/docs/getting-started/accounts/">Cloud.gov documentation.</a>
                         </p>
                         <p>If you have questions about these conditions, please email <a href="mailto:cloud-gov-support@gsa.gov">cloud-gov-support@gsa.gov.</a>
                         </p>
@@ -73,7 +73,7 @@
                                     class="badge--inline txt-m mls mrm" 
                                     alt="cloud.gov icon" 
                                 />
-                                <span class="txt-m">Sign in with cloud.gov</span>
+                                <span class="txt-m">Sign in with Cloud.gov</span>
                             </a>
                         </div>
 
